--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">CodePushTest</string>
+    <string name="app_name">MarcaoCodePushTest</string>
     <string moduleConfig="true" name="CodePushDeploymentKey">MeMsziY9fZ3-vNMDlQZD-YssoKOoQpckadgqZ</string>
 </resources>
